# Resultats

./: .gitattributes  LICENSE  README.md  pyproject.toml
dyablo/ShearB/: README.md  last.ini  main.py  plot_field.py  plot_params.json  timers.txt
dyablo/ShearB/20251108_GLMMHDEuler_WB/: euler_wb_iter0000000.h5  euler_wb_iter0000000.xmf  euler_wb_iter0000032.h5  euler_wb_iter0000032.xmf  euler_wb_iter0000063.h5  euler_wb_iter0000063.xmf  euler_wb_iter0000094.h5  euler_wb_iter0000094.xmf  euler_wb_iter0000125.h5  euler_wb_iter0000125.xmf  euler_wb_iter0000156.h5  euler_wb_iter0000156.xmf  euler_wb_iter0000188.h5  euler_wb_iter0000188.xmf  euler_wb_iter0000219.h5  euler_wb_iter0000219.xmf  euler_wb_iter0000250.h5  euler_wb_iter0000250.xmf  euler_wb_iter0000281.h5  euler_wb_iter0000281.xmf  euler_wb_iter0000312.h5  euler_wb_iter0000312.xmf  euler_wb_iter0000344.h5  euler_wb_iter0000344.xmf  euler_wb_iter0000375.h5  euler_wb_iter0000375.xmf  euler_wb_iter0000406.h5  euler_wb_iter0000406.xmf  euler_wb_iter0000437.h5  euler_wb_iter0000437.xmf  euler_wb_iter0000468.h5  euler_wb_iter0000468.xmf  euler_wb_iter0000500.h5  euler_wb_iter0000500.xmf  euler_wb_iter0000531.h5  euler_wb_iter0000531.xmf  euler_wb_iter0000562.h5  euler_wb_iter0000562.xmf  euler_wb_iter0000593.h5  euler_wb_iter0000593.xmf  (+363 more)
dyablo/convection/: README.md  isothermal_triple_2D_boosted.ini  last.ini  mhd_isothermal_triple_2D_boosted.ini
dyablo/magnetoconvection/: README.md  plot.py  plot_params.json
dyablo/well-balancing/: current_architecture.md
fv2d/ShearB/: README.md  last.ini
(+12004 files in other folders)
